# api/openapi-spec/swagger.json
@@ -3989,7 +3989,33 @@
      }
     }
    },
-   "v1.Bootloader": {},
+   "v1.Bootloader": {
+    "description": "Represents the firmware blob used to assist in the domain creation process.\nUsed by Xen fully virtualized domains as well as setting the QEMU BIOS file path for QEMU/KVM domains",
+    "required": [
+     "path",
+     "secure",
+     "readonly",
+     "type"
+    ],
+    "properties": {
+     "path": {
+      "description": "The path to the firmware blob",
+      "type": "string"
+     },
+     "readonly": {
+      "description": "Should the image be writable or read-only",
+      "type": "boolean"
+     },
+     "secure": {
+      "description": "Some firmwares implements the Secure boot feature",
+      "type": "boolean"
+     },
+     "type": {
+      "description": "Accepts values `rom` or `pflash`; tells the hypervisor where in the guest memory the file should be mapped\nIf the loader points to an UEFI image, `type` should be `pflash`",
+      "type": "string"
+     }
+    }
+   },
    "v1.CDRomTarget": {
     "properties": {
      "bus": {
