# pkg/api/v1/deepcopy_generated.go
@@ -29,6 +29,40 @@ import (
 )
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *Bootloader) DeepCopyInto(out *Bootloader) {
+	*out = *in
+	if in.Secure != nil {
+		in, out := &in.Secure, &out.Secure
+		if *in == nil {
+			*out = nil
+		} else {
+			*out = new(bool)
+			**out = **in
+		}
+	}
+	if in.ReadOnly != nil {
+		in, out := &in.ReadOnly, &out.ReadOnly
+		if *in == nil {
+			*out = nil
+		} else {
+			*out = new(bool)
+			**out = **in
+		}
+	}
+	return
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new Bootloader.
+func (in *Bootloader) DeepCopy() *Bootloader {
+	if in == nil {
+		return nil
+	}
+	out := new(Bootloader)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *CDRomTarget) DeepCopyInto(out *CDRomTarget) {
 	*out = *in
 	if in.ReadOnly != nil {
@@ -522,7 +556,7 @@ func (in *DomainSpec) DeepCopyInto(out *DomainSpec) {
 			*out = nil
 		} else {
 			*out = new(Bootloader)
-			**out = **in
+			(*in).DeepCopyInto(*out)
 		}
 	}
 	return
