# pkg/virt-launcher/virtwrap/api/schema.go
@@ -517,7 +517,7 @@ type OS struct {
 	BootOrder  []Boot    `xml:"boot"`
 	BootMenu   *BootMenu `xml:"bootmenu,omitempty"`
 	BIOS       *BIOS     `xml:"bios,omitempty"`
-	Loader     *Loader   `xml:"loader,omitempty"`
+	BootLoader *Loader   `xml:"loader,omitempty"`
 	Kernel     string    `xml:"kernel,omitempty"`
 	Initrd     string    `xml:"initrd,omitempty"`
 	KernelArgs string    `xml:"cmdline,omitempty"`
